--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -118,6 +118,11 @@ COPY src/universe/autoware_universe/sensing/autoware_pcl_extensions /autoware/sr
 COPY src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor /autoware/src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor
 COPY src/universe/autoware_universe/vehicle/autoware_external_cmd_converter /autoware/src/universe/autoware_universe/vehicle/autoware_external_cmd_converter
 COPY src/universe/autoware_universe/vehicle/autoware_raw_vehicle_cmd_converter /autoware/src/universe/autoware_universe/vehicle/autoware_raw_vehicle_cmd_converter
+
+# diffusion_planner depends on cuda
+COPY src/universe/autoware_universe/sensing/autoware_cuda_utils /autoware/src/universe/autoware_universe/sensing/autoware_cuda_utils
+COPY src/universe/autoware_universe/perception /autoware/src/universe/autoware_universe/perception
+
 RUN /autoware/resolve_rosdep_keys.sh /autoware/src ${ROS_DISTRO} \
   > /rosdep-universe-planning-control-depend-packages.txt \
   && cat /rosdep-universe-planning-control-depend-packages.txt
@@ -132,15 +137,13 @@ ARG ROS_DISTRO
 COPY src/universe/autoware_universe/launch/tier4_vehicle_launch /autoware/src/universe/autoware_universe/launch/tier4_vehicle_launch
 COPY src/universe/autoware_universe/launch/tier4_system_launch /autoware/src/universe/autoware_universe/launch/tier4_system_launch
 COPY src/universe/autoware_universe/vehicle /autoware/src/universe/autoware_universe/vehicle
+COPY src/universe/autoware_universe/system /autoware/src/universe/autoware_universe/system
 
 # planning_validator and its dependencies
 COPY src/universe/autoware_universe/planning/planning_validator /autoware/src/universe/autoware_universe/planning/planning_validator
-COPY src/core/autoware_core/common /autoware/src/core/autoware_core/common
-COPY src/core/autoware_core/testing /autoware/src/core/autoware_core/testing
 COPY src/core/autoware_core/planning/autoware_planning_factor_interface /autoware/src/core/autoware_core/planning/autoware_planning_factor_interface
 COPY src/core/autoware_core/planning/autoware_route_handler /autoware/src/core/autoware_core/planning/autoware_route_handler
 
-COPY src/universe/autoware_universe/system /autoware/src/universe/autoware_universe/system
 COPY src/core/autoware_core/map/autoware_map_height_fitter /autoware/src/core/autoware_core/map/autoware_map_height_fitter
 COPY src/universe/autoware_universe/localization/autoware_pose2twist /autoware/src/universe/autoware_universe/localization/autoware_pose2twist
 COPY src/sensor_component/external/sensor_component_description /autoware/src/sensor_component/external/sensor_component_description
