use self-hosted runner for health-check
Signed-off-by: mitsudome-r <ryohsuke.mitsudome@tier4.jp>

--- a/.github/workflows/health-check.yaml
+++ b/.github/workflows/health-check.yaml
@@ -33,17 +33,18 @@ jobs:
         include:
           - build-type: main
             platform: amd64
-            runner: ubuntu-24.04
+            runner: "['self-hosted','Linux','X64','docker-test']"
             lib-dir: x86_64
+            container: ubuntu:22.04
           - build-type: nightly
             platform: amd64
-            runner: ubuntu-24.04
+            runner: "['ubuntu-24.04']"
             lib-dir: x86_64
           - build-type: main-arm64
             platform: arm64
-            runner: ubuntu-24.04-arm
+            runner: "['ubuntu-24.04-arm']"
             lib-dir: aarch64
-    runs-on: ${{ matrix.runner }}
+    runs-on: ${{ fromJson(matrix.runner) }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -67,10 +68,14 @@ jobs:
             docker/**
             setup-dev-env.sh
 
+      - name: Show disk space
+        if: always()
+        run: |
+          df -h
+
       - name: Free disk space
-        if: ${{ steps.changed-files.outputs.any_changed == 'true' ||
-          github.event_name == 'schedule' ||
-          github.event_name == 'workflow_dispatch' }}
+        if: ${{ steps.changed-files.outputs.any_changed == 'true' &&
+          matrix.build-type != 'main' }}
         uses: ./.github/actions/free-disk-space
 
       - name: Build 'Autoware'
